2008-06-11  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/client_util.c (application_property_add_to_argv):
	                           Add include and exclude.
	* client-src/client_util.h (application_property_add_to_argv):
	                           New prototype.
	* client-src/sendbackup.c, client-src/sendsize.c,
	  client-src/selfcheck.c, recover-src/extract_list.c:
	  Add bsu param to application_property_add_to_argv.
	* client-src/selfcheck.c: Check if application support includ/exclude.
	* application-src/amgtar_perl.pl: Don't support include/exclude.
	* application-src/amgtar.c: Support include-optional and
	                            exclude-optional.
	* common-src/amxml.c: Fix include/exclude parsing.

2008-06-11  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/Makefile.am: Install amgtar and amstar suid root.

2008-06-11  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/selfcheck.c: Print cmdline before execing the application.
	* application-src/generic-dumper.pl: Cleanup.
	* application-src/script-oracle.pl: Cleanup.
	* application-src/script-email.pl: Cleanup.
	* application-src/amgtar_perl.pl: Cleanup.
	* application-src/generic-script.pl: Cleanup.
	* application-src/Makefile.am: Remove all scripts from CHECK_PERL.
	* perl/Amanda/Debug.swg: Typo.

2008-06-10  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/Makefile.am: don't use $(builddir), fix comparison
	* installcheck/Makefile.am: don't use $(builddir)

2008-06-10  Ian Turner <ian@zmanda.com>
	* common-src/fileheader.c: Silence a compiler warning.
	* device-src/rait-device.c: ditto.

2008-06-10  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/rait-device.c: hack around glib bug in versions <2.10.2
	  using the precompiler macro instead of glib_check_version, which
	  doesn't exist in every version of glib

2008-06-10 Dan Locks <dwlocks@zmanda.com>
	* packaging/rpm/amanda.spec:  Replaced individual SBINDIR/am... entries 