@@ -176,6 +176,7 @@ typedef enum {
     fe_pp_script,	// only in XML
     fe_amindexd_DLE,
     fe_amrecover_dle_in_header,
+    fe_xml_estimate,
 
     /*
      * All new features must be inserted immediately *before* this entry.
